--- a/src/components/controls3d/style/controls3d.less
+++ b/src/components/controls3d/style/controls3d.less
@@ -4,13 +4,13 @@
   text-align: center;
   right: 0;
   left: 0;
-  bottom: 51px;
+  bottom: unit(@bt-bottom, px);
   margin-left: auto;
   margin-right: auto;
   width: 200px;
   z-index: 600;
   @media (max-width: @screen-tablet) {
-    bottom: 26px;
+    bottom: unit(@bt-bottom-sm, px);
     width: 120px;
     height: 44px;
   }
